--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>devops</artifactId>
+	<artifactId>edureka</artifactId>
 	<version>1.1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
